@@ -23,6 +23,9 @@ Major changes since man-db 2.6.7.1:
 	  high-precision timestamps to determine whether it needs to update
 	  databases.
 
+	o Timestamps of manual pages are also now stored in the database
+	  with high precision and compared accordingly.
+
 man-db 2.6.7.1 (10 April 2014)
 ==============================
 
